# openapi/spec/users/paths.yaml
@@ -67,6 +67,9 @@ paths:
         "500":
           $ref: "./../common/responses.yaml#/components/responses/InternalServerError"
 
+        "504":
+          $ref: "./../common/responses.yaml#/components/responses/GatewayTimeout"
+
   /users/{id}:
     get:
       security: []
@@ -103,3 +106,6 @@ paths:
 
         "500":
           $ref: "./../common/responses.yaml#/components/responses/InternalServerError"
+
+        "504":
+          $ref: "./../common/responses.yaml#/components/responses/GatewayTimeout"
